Fix dark mode for artic, azure, legions, last droids

--- a/src/css/games/arctic.less
+++ b/src/css/games/arctic.less
@@ -47,4 +47,8 @@ html[data-theme=dark] {
 	.arc_unavailable:before {
 		background-color: #00000099;
 	}
+
+	.dijitTooltipContainer .newArchiveComment {
+		color: var(--light-80);
+	}
 }
